# HW6

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION
.github/workflows/: cicd.yml
